--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flashcard</title>
 </head>
 <body>
+    <main>
+
+    </main>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
+
+    </footer><main>
+    <section id="container"> 
+
+</section>  <h3> Programação </h3>
     
 </body>
-</html>
+</html><article class="cartao">
+
+                </div><div class="cartao__conteudo__pergunta""quem sou eu?"
+</div> 
+<div class="cartao__conteudo__resposta">
+"eu sou bryan, um muleke zika das ieia e 17 nos"
+</div> 
+<article class="cartao">
+        <div class="cartao__conteudo">
+                <h3> Programação </h3>
+                      <div class="cartao__conteudo__pergunta">
+                        meu presente
+                        </div>                        
+                       <div class="cartao__conteudo__resposta">
+                        trabalho com pintura,não namoro 
+                         </div>
+                        </div>
+                            
+         </article>
