--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
 
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
+        <p>flashcard</p>
 
     </footer><main>
     <section id="container"> 
 
-</section>  <h3> Programação </h3>
+</section>  <h3> quem sou eu? </h3>
     
 </body>
 </html><article class="cartao">
 
-                </div><div class="cartao__conteudo__pergunta""quem sou eu?"
-</div> 
+                </div><div class="cartao__conteudo__pergunta"
+
 <div class="cartao__conteudo__resposta">
-"eu sou bryan, um muleke zika das ieia e 17 nos"
+
+    eu sou bryan, um muleke zika das ieia e 17 anos
 </div> 
 <article class="cartao">
         <div class="cartao__conteudo">
-                <h3> Programação </h3>
+                <h3> meu presente</h3>
                       <div class="cartao__conteudo__pergunta">
-                        meu presente
+                        
                         </div>                        
                        <div class="cartao__conteudo__resposta">
                         trabalho com pintura,não namoro 
